style properties for hover button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="./script.js"></script>
 
     <!-- Footer section -->
-    <footer class="footer">
+    <footer class="footer sticky-bottom">
       <div class="footer-left">
         <h5 class="copyright">
           <span><i class="far fa-copyright"></i></span> 2019 Teri
